Enhance backend security and configuration; add JWT support and PostgreSQL datasource. Update frontend layout and health check with user authentication handling.